syntax  = "proto3";

package pb;

import "proto/processor_message.proto";
import "proto/memory_message.proto";
import "proto/keyboard_message.proto";
import "proto/screen_message.proto";
import "proto/storage_message.proto";
import "google/protobuf/timestamp.proto";

option go_package = "protobuf-demo/pb";

message Laptop {
  string id = 1;
  string name = 2;
  string brand = 3;
  CPU cpu = 4;
  Memory memory = 5;
  repeated GPU GPUs = 6;
  repeated Storage storages = 7;
  Screen screen = 8;
  Keyboard keyboard = 9;
  oneof weight {
    double weight_kg = 10;
    double weight_pound = 11;
  }
  double price_usd = 12;
  uint32 release_year = 13;
  google.protobuf.Timestamp updated_at = 14;
}
